@@ -1,5 +1,8 @@
 Changes with Apache 1.3
 
+  *) AddModuleInfo directive for mod_info which allows you to annotate
+     the output of mod_info.  ["Lou D. Langholtz" <ldl@usi.utah.edu>]
+
   *) Added NoProxy directive to avoid using ProxyRemote for selected
      addresses.  Added ProxyDomain directive to cause unqualified
      names to be qualified by redirection.
